--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,11 @@ executors:
       - image: hashicorp/terraform:latest 
     working_directory: /tmp/project
 
+  aws-executor:
+    docker:
+      - image: amazon/aws-cli:latest
+    working_directory: /tmp/project
+
 jobs:
   tfsec-test:
     executor: tfsec-executor
@@ -61,7 +66,7 @@ jobs:
           command: echo "terraform apply -auto-approve"
 
   infrastructure-tests:
-    executor: terraform-executor
+    executor: aws-executor
     steps:
      - checkout
      - run:
