--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,9 @@ jobs:
      - run:
          name: Check EC2 instances
          command: |
+           aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+           aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+           aws configure set region us-east-1 
            aws ec2 describe-instances --query "Reservations[*].Instances[*].{ID:InstanceId}" --output text
      - run:
          name: Check RDS database
