--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
          name: Check VPC and subnets
          command: |
            aws ec2 describe-vpcs --query "Vpcs[*].{ID:VpcId}" --output text
-           aws ec2 describe-subnets --query "Subnets[*].{ID:SubnetId}" --output text
+           # aws ec2 describe-subnets --query "Subnets[*].{ID:SubnetId}" --output text
            echo "AWS CLI commands completed"
            
      - run:
