--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   plan-apply:
-    working_directory: /tmp/project/infrastructure
+    working_directory: /tmp/project
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
     steps:
@@ -10,6 +10,7 @@ jobs:
       - run:
           name: terraform init & plan
           command: |
+            cd infrastructure
             terraform init -input=false
             terraform plan -out tfapply -var-file 01-terraform.tfvars
       - persist_to_workspace:
