--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,8 @@ jobs:
             else
               echo "TF_VAR_environment=test" >> $BASH_ENV
             fi
-      - run:
-          name: Test 1
-          command: cp $BASH_ENV bash.env
-      - run:
-          name: Test 2
-          command: printenv TF_VAR_environment
+            cp $BASH_ENV bash.env
+            echo $TF_VAR_environment
       - run:
           name: Terraform Init & Validate & Plan
           command: |
