--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,9 @@ jobs:
             else
               echo "TF_VAR_environment=test" >> $BASH_ENV
             fi
+            echo $BASH_ENV
             cp $BASH_ENV bash.env
+            cat bash.env
             echo $TF_VAR_environment
       - run:
           name: Terraform Init & Validate & Plan
