--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,15 @@ jobs:
           name: Set Environment Variables
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
-              echo "TF_VAR_environment=production" >> $BASH_ENV
+              echo "TF_VAR_environment=production" >> bash.env
             else
-              echo "TF_VAR_environment=test" >> $BASH_ENV
+              echo "TF_VAR_environment=test" >> bash.env
             fi
-            cp $BASH_ENV infrastructure/bash.env
       - run:
           name: Terraform Init & Validate & Plan
           command: |
             cd infrastructure \
-              && cat bash.env >> $BASH_ENV \
+              && source bash.env \
               && echo $TF_VAR_environment \
               && terraform init \
               && terraform validate \
