--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,10 +27,10 @@ jobs:
           command: |
             cd infrastructure \
               && source ../bash.env \
-              && echo $TF_VAR_environment \
               && terraform init \
               && terraform validate \
-              && terraform plan
+              && terraform plan \
+              && terraform plan -var="environment=test"
       - persist_to_workspace:
           root: ~/project
           paths:
