--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
           name: Set Environment Variables
           command: |
             if [ "${CIRCLE_BRANCH}" == "main" ]; then
-              echo "TF_VAR_environment=production" >> bash.env
+              echo "TF_VAR_ENVIRONMENT=production" >> bash.env
             else
-              echo "TF_VAR_environment=test" >> bash.env
+              echo "TF_VAR_ENVIRONMENT=test" >> bash.env
             fi
       - run:
           name: Terraform Init & Validate & Plan
@@ -29,7 +29,7 @@ jobs:
               && source ../bash.env \
               && terraform init \
               && terraform validate \
-              && terraform plan -var="environment=test"
+              && terraform plan"
       - persist_to_workspace:
           root: ~/project
           paths:
