--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
               && source ../bash.env \
               && terraform init \
               && terraform validate \
-              && terraform plan"
+              && terraform plan
       - persist_to_workspace:
           root: ~/project
           paths:
