--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
           command: |
             ./env.sh \
               && cd infrastructure \
+              && ../env.sh \
+              && cat env.sh \
+              && echo $TF_VAR_ENVIRONMENT \
               && terraform init \
               && terraform validate \
               && terraform plan
