--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,8 @@ jobs:
       - run:
           name: Terraform Init & Validate & Plan
           command: |
-            ./env.sh \
+            ls && ./env.sh \
               && cd infrastructure \
-              && ../env.sh \
               && cat ../env.sh \
               && echo $TF_VAR_ENVIRONMENT \
               && terraform init \
