--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             else
               echo "export TF_VAR_ENVIRONMENT=test" >> env_vars.sh
             fi
-            chmod +x env_vars.sh
+            chmod +x install_terraform.sh
       - run:
           name: Terraform Init & Validate & Plan
           command: |
