--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,12 @@ jobs:
             else
               echo "export TF_VAR_ENVIRONMENT=test" >> env_vars.sh
             fi
-            chmod +x env_vars.sh && sh env_vars.sh
+            chmod +x env_vars.sh
       - run:
           name: Terraform Init & Validate & Plan
           command: |
-            cd infrastructure \
+            sh env_vars.sh \
+              && cd infrastructure \
               && echo $TF_VAR_ENVIRONMENT \
               && terraform init \
               && terraform validate \
@@ -43,7 +44,7 @@ jobs:
           at: ~/project
       - run:
           name: Apply Terraform Infrastructure
-          command: ./env_vars.sh && cd infrastructure && terraform apply -auto-approve
+          command: sh env_vars.sh && cd infrastructure && terraform apply -auto-approve
       - persist_to_workspace:
           root: ~/project
           paths:
@@ -72,7 +73,7 @@ jobs:
           at: ~/project
       - run: 
           name: Destroy Terraform Infrastructure
-          command: ./env_vars.sh && cd infrastructure && terraform destroy -auto-approve
+          command: sh env_vars.sh && cd infrastructure && terraform destroy -auto-approve
   
 workflows:
   tf-test-deploy:
