--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,7 @@ jobs:
       - run:
           name: Terraform Init & Validate & Plan
           command: |
-            sh env_vars.sh \
-              && echo $TF_VAR_ENVIRONMENT \
-              && cd infrastructure \
+            cd infrastructure \
               && sh ../env_vars.sh \
               && echo $TF_VAR_ENVIRONMENT
               && terraform init \
