--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: |
             cd infrastructure \
               && sh ../env_vars.sh \
-              && echo $TF_VAR_ENVIRONMENT
+              && echo $TF_VAR_ENVIRONMENT \
               && terraform init \
               && terraform validate \
               && terraform plan
