--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
           command: |
             cd infrastructure \
               && sh ../env_vars.sh \
+              && export TF_VAR_ENVIRONMENT=test \
               && echo $TF_VAR_ENVIRONMENT \
               && terraform init \
               && terraform validate \
